fixed navigation layout issues

--- a/_sass/components/_nav-bar.scss
+++ b/_sass/components/_nav-bar.scss
@@ -13,15 +13,8 @@
 
   &.is-open {
     .nav-bar__logo {
-      .path {
-        fill: $colour--white;
-        transition: 300ms ease;
-      }
-
-      .path-stroke {
-        stroke: $colour--white;
-        transition: 300ms ease;
-      }
+      color: $colour--white;
+      transition: 300ms ease;
     }
   }
 }
@@ -76,21 +69,8 @@
 }
 
 .nav-bar__logo {
-  @extend .thumbnail;
-  max-width: 4rem;
-
-  @include media-query($breakpoint--large) {
-    max-width: 5rem;
-  }
-
-  svg {
-    display: block;
-    width: 100%;
-  }
-
-  .path,
-  .path-stroke {
-    transition: 300ms ease;
+  a {
+    display: inline-block;
   }
 
   &.hide {
