--- a/_sass/components/_nav-menu.scss
+++ b/_sass/components/_nav-menu.scss
@@ -86,7 +86,7 @@ $nav-inactive: #676767;
       margin-bottom: spacing(9);
     }
 
-    @include media-query($breakpoint--x-large) {
+    @include media-query($breakpoint--large) {
       grid-column: 2 / 8;
     }
   }
@@ -94,11 +94,11 @@ $nav-inactive: #676767;
 
 .nav-menu__wrapper {
   @include media-query($breakpoint--small) {
-    grid-column: 2 / 6;
+    grid-column: 1 / 8;
   }
 
-  @include media-query($breakpoint--medium) {
-    grid-column: 2 / 5;
+  @include media-query($breakpoint--large) {
+    grid-column: 2 / 8;
   }
 }
 
@@ -134,6 +134,7 @@ $nav-inactive: #676767;
   color: $colour--white;
   display: inline-block;
   transition: transform 200ms ease;
+  margin-bottom: 0;
 
   &:visited {
     color: $colour--white;
@@ -158,9 +159,9 @@ $nav-inactive: #676767;
   }
 
   @include media-query($breakpoint--x-large) {
-    height: 100%;
+    height: calc(100% - 2.4rem);
     position: fixed;
-    top: 0;
+    top: spacing(3);
     right: 0;
     min-width: 25rem;
     overflow: hidden;
@@ -182,6 +183,7 @@ $nav-inactive: #676767;
 
 .nav-menu__aside-content {
   @include overlay;
+  height: calc(100% - 2.4rem);
   background: url('../images/menu-cover.jpg') no-repeat;
   background-size: cover;
   opacity: 0;
@@ -207,7 +209,7 @@ $nav-inactive: #676767;
 .nav-menu__aside-overlay {
   background-color: #c8a07d;
   width: 100%;
-  height: 100%;
+  height: calc(100% - 2.4rem);
   right: 0;
   position: absolute;
   transform: translateX(100%);
@@ -273,6 +275,10 @@ $nav-inactive: #676767;
   display: table;
 
   @include media-query($breakpoint--small) {
+    grid-column: 1 / 3;
+  }
+
+  @include media-query($breakpoint--large) {
     grid-column: 2 / 4;
   }
 }
